test/end-to-end/compile-errors/empty-enum-or-union.crow
main void() unsafe
	zeroed::e f

f void(a u)
	match a

f void(a e)
	match a

e enum

u union
